test_regress/t/t_assert_ctl_unsup.out
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:58:10: Unsupported: assertcontrols in classes
                                                : ... note: In instance 't.assert_class'
   58 |          $asserton;
      |          ^~~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:64:10: Unsupported: assertcontrols in classes
                                                : ... note: In instance 't.assert_class'
   64 |          $assertoff;
      |          ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:15:7: Unsupported control_type (IEEE 1800-2023 Table 20-5)
   15 |       $assertcontrol(1);
      |       ^~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:16:7: Unsupported control_type (IEEE 1800-2023 Table 20-5)
   16 |       $assertcontrol(2);
      |       ^~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:17:7: Unsupported control_type (IEEE 1800-2023 Table 20-5)
   17 |       $assertcontrol(6);
      |       ^~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:18:7: Unsupported control_type (IEEE 1800-2023 Table 20-5)
   18 |       $assertcontrol(7);
      |       ^~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:19:7: Unsupported control_type (IEEE 1800-2023 Table 20-5)
   19 |       $assertcontrol(8);
      |       ^~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:20:7: Unsupported control_type (IEEE 1800-2023 Table 20-5)
   20 |       $assertcontrol(9);
      |       ^~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:21:7: Unsupported control_type (IEEE 1800-2023 Table 20-5)
   21 |       $assertcontrol(10);
      |       ^~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:22:7: Unsupported control_type (IEEE 1800-2023 Table 20-5)
   22 |       $assertcontrol(11);
      |       ^~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:28:7: Unsupported control_type (IEEE 1800-2023 Table 20-5)
   28 |       $assertcontrol(0);
      |       ^~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:29:7: Unsupported control_type (IEEE 1800-2023 Table 20-5)
   29 |       $assertcontrol(100);
      |       ^~~~~~~~~~~~~~
%Error: Exiting due to
